# box-office-prediction

./: .gitignore  LICENSE  README.md  Untitled.ipynb  app.py  box_office_env.yml  pyproject.toml  requirements.txt  setup.py  streamlit_app_visual_demo.py
.github/workflows/: build_test.yml
Examples/: README.md
box-office-prediction/: app.py  helpers.py  rating_model.py  streamlit_app_visual_demo.py
box-office-prediction/.streamlit/: config.toml
box-office-prediction/notebooks/: Rating_Model.ipynb
box-office-prediction/notebooks/data_cleaning/: Data_Ratings_v2.ipynb  data_extraction_EDA.ipynb
box-office-prediction/notebooks/model_training/: Rating_Model.ipynb
box-office-prediction/tests/: test_app.py
box_office_prediction/: app.py  rating_model.py  revenue_model.py
box_office_prediction/.streamlit/: config.toml
box_office_prediction/notebooks/: Revenue_Model.ipynb
box_office_prediction/tests/: test_app.py  test_death.py  test_helpers.py  test_movie_rating_model.py  test_movie_revenue_model.py
cleaned_data/: tconsts_prd_company.csv
data/: InflationCPIs.csv
data/cleaned/: test_data_movies.csv
docs/: Draft-technology_review_v3.pptx  component_specification.md  functional_specification.md
helpers/: CatBoost_Model.ipynb  Data_Ratings_v1.ipynb  Data_Ratings_v2.ipynb  Rating_Model.ipynb  Revenue_Model.ipynb
scripts/: Data_Ratings_v1.ipynb  Data_Ratings_v3.ipynb  data_ratings_v3.py  death-filter.ipynb  death_filter.py  generate_test_data.py
